Update project configuration and dependencies for Tauri integration. Modified package.json scripts, added Tauri API dependencies, and updated example project files. Enhanced security permissions in default.json and adjusted tauri.conf.json for local development.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "version": "0.1.0",
     "type": "module",
     "scripts": {
-        "tauri": "tauri",
+        "dev": "tauri dev",
         "build": "tauri build",
-        "dev": "tauri dev"
+        "tauri": "tauri"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2"
