--- a/example/runwrap/package.json
+++ b/example/runwrap/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "runwrap",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.5.13"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/tsconfig": "^0.7.0",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5",
-    "vue-tsc": "^2.2.8"
-  }
+    "name": "runwrap",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc -b && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
+        "@tauri-apps/api": "^2",
+        "@tauri-apps/plugin-dialog": "^2.2.0",
+        "@tauri-apps/plugin-fs": "^2.2.0",
+        "@tauri-apps/plugin-http": "^2.2.0",
+        "@tauri-apps/plugin-opener": "^2",
+        "@tauri-apps/plugin-os": "^2.2.0",
+        "@tauri-apps/plugin-shell": "^2.2.0",
+        "@tauri-apps/plugin-store": "^2.2.0",
+        "@tauri-apps/plugin-updater": "^2.7.1",
+        "@tauri-apps/plugin-window-state": "^2.2.1",
+        "vue": "^3.5.13"
+    },
+    "devDependencies": {
+        "@tauri-apps/cli": "^2.5.0",
+        "@vitejs/plugin-vue": "^5.2.3",
+        "@vue/tsconfig": "^0.7.0",
+        "typescript": "~5.8.3",
+        "vite": "^6.3.5",
+        "vue-tsc": "^2.2.8"
+    }
 }
