--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2"
+    },
+    "dependencies": {
+        "@tauri-apps/plugin-store": "~2"
     }
 }
