Update package.json to include debug script, enhance App.vue with startup directory logging, and modify init.rs to retrieve and log startup directory.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "tauri dev",
         "build": "tauri build",
-        "tauri": "tauri"
+        "debug": "tauri build --debug"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2"
