--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@tauri-apps/cli": "^2"
     },
     "dependencies": {
+        "@tauri-apps/plugin-shell": "^2.2.1",
         "@tauri-apps/plugin-store": "~2"
     }
 }
