--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ serde_json = "1"
 tauri-plugin-store = "2"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
+tauri-plugin-shell = "2.2.1"
