--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,4 @@ tauri-plugin-store = "2"
 tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 tauri-plugin-shell = "2.2.1"
+machine-uid = "0.5.3"
