--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "@tauri-apps/cli": "^2"
     },
     "dependencies": {
+        "@tauri-apps/plugin-dialog": "^2.2.2",
+        "@tauri-apps/plugin-fs": "^2.3.0",
         "@tauri-apps/plugin-shell": "^2.2.1",
         "@tauri-apps/plugin-store": "~2"
     }
