--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,5 @@ tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 tauri-plugin-shell = "2.2.1"
 machine-uid = "0.5.3"
+tauri-plugin-fs = "2.3.0"
+tauri-plugin-dialog = "2.2.2"
