--- a/example/runwrap/package.json
+++ b/example/runwrap/package.json
@@ -9,8 +9,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
         "@tauri-apps/api": "^2",
+        "@tauri-apps/plugin-autostart": "^2.3.0",
+        "@tauri-apps/plugin-cli": "^2.2.0",
+        "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
         "@tauri-apps/plugin-dialog": "^2.2.0",
         "@tauri-apps/plugin-fs": "^2.2.0",
         "@tauri-apps/plugin-http": "^2.2.0",
