--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,7 @@ tauri-plugin-shell = "2.2.1"
 machine-uid = "0.5.3"
 tauri-plugin-fs = "2.3.0"
 tauri-plugin-dialog = "2.2.2"
+
+[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
+tauri-plugin-autostart = "2.3.0"
+tauri-plugin-cli = "2.2.0"
