--- a/example/runwrap/package.json
+++ b/example/runwrap/package.json
@@ -15,13 +15,21 @@
         "@tauri-apps/plugin-clipboard-manager": "^2.2.2",
         "@tauri-apps/plugin-dialog": "^2.2.0",
         "@tauri-apps/plugin-fs": "^2.2.0",
-        "@tauri-apps/plugin-http": "^2.2.0",
-        "@tauri-apps/plugin-opener": "^2",
-        "@tauri-apps/plugin-os": "^2.2.0",
+        "@tauri-apps/plugin-global-shortcut": "^2.2.1",
+        "@tauri-apps/plugin-http": "^2.4.3",
+        "@tauri-apps/plugin-log": "^2.4.0",
+        "@tauri-apps/plugin-notification": "^2.2.2",
+        "@tauri-apps/plugin-opener": "^2.2.6",
+        "@tauri-apps/plugin-os": "^2.2.1",
+        "@tauri-apps/plugin-positioner": "^2.2.0",
+        "@tauri-apps/plugin-process": "^2.2.1",
         "@tauri-apps/plugin-shell": "^2.2.0",
+        "@tauri-apps/plugin-sql": "^2.2.0",
         "@tauri-apps/plugin-store": "^2.2.0",
         "@tauri-apps/plugin-updater": "^2.7.1",
-        "@tauri-apps/plugin-window-state": "^2.2.1",
+        "@tauri-apps/plugin-upload": "^2.2.1",
+        "@tauri-apps/plugin-websocket": "^2.3.0",
+        "@tauri-apps/plugin-window-state": "^2.2.2",
         "vue": "^3.5.13"
     },
     "devDependencies": {
