--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,7 +29,23 @@ tauri-plugin-shell = "2.2.1"
 machine-uid = "0.5.3"
 tauri-plugin-fs = "2.3.0"
 tauri-plugin-dialog = "2.2.2"
+tauri-plugin-clipboard-manager = "2.2.2"
+tauri-plugin-http = "2.4.4"
+tauri-plugin-localhost = "2.2.0"
+tauri-plugin-log = "2.4.0"
+tauri-plugin-notification = "2.2.2"
+tauri-plugin-os = "2.2.1"
+tauri-plugin-persisted-scope = "2.2.2"
+tauri-plugin-process = "2.2.1"
+tauri-plugin-sql = { version = "2.2.0", features = ["mysql", "postgres", "sqlite"] }
+tauri-plugin-upload = "2.2.1"
+tauri-plugin-websocket = "2.3.0"
 
 [target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
 tauri-plugin-autostart = "2.3.0"
 tauri-plugin-cli = "2.2.0"
+tauri-plugin-global-shortcut = "2.2.1"
+tauri-plugin-positioner = "2.2.0"
+tauri-plugin-single-instance = "2.2.4"
+tauri-plugin-updater = "2.7.1"
+tauri-plugin-window-state = "2.2.2"
