Update GitHub Actions workflow to change release tag and name from 'PakePlus' to 'TauriMan', and modify tauri.conf.json to set version from '0.1.0' to reference '../package.json'.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,8 +96,8 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               with:
-                  tagName: 'PakePlus-v__VERSION__'
-                  releaseName: 'PakePlus v__VERSION__'
+                  tagName: 'TauriMan-v__VERSION__'
+                  releaseName: 'TauriMan v__VERSION__'
                   body_path: ./Note.md
                   releaseDraft: true
                   prerelease: false
