--- a/example/runwrap/package.json
+++ b/example/runwrap/package.json
@@ -22,7 +22,8 @@
         "@tauri-apps/plugin-updater": "^2.7.1",
         "@tauri-apps/plugin-window-state": "^2.2.1",
         "element-plus": "^2.9.11",
-        "vue": "^3.5.13"
+        "vue": "^3.5.13",
+        "vue-i18n": "12.0.0-alpha.2"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2.5.0",
