Update package.json to add a new script for generating app icons and replace multiple icon files in the src-tauri/icons directory with updated versions.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "tauri dev",
         "build": "tauri build",
-        "debug": "tauri build --debug"
+        "debug": "tauri build --debug",
+        "icon": "tauri icon"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2"
