--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "icon": "tauri icon"
     },
     "devDependencies": {
-        "@tauri-apps/cli": "^2"
+        "@tauri-apps/cli": "^2",
+        "png2icons": "^2.0.1",
+        "sharp": "^0.34.2"
     },
     "dependencies": {
         "@tauri-apps/plugin-dialog": "^2.2.2",
