--- a/example/runwrap/package.json
+++ b/example/runwrap/package.json
@@ -22,6 +22,7 @@
         "@tauri-apps/plugin-updater": "^2.7.1",
         "@tauri-apps/plugin-window-state": "^2.2.1",
         "element-plus": "^2.9.11",
+        "vconsole": "^3.15.1",
         "vue": "^3.5.13",
         "vue-i18n": "12.0.0-alpha.2"
     },
