--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "version": "0.1.0",
     "type": "module",
     "scripts": {
-        "dev": "tauri dev",
-        "build": "tauri build",
-        "debug": "tauri build --debug",
+        "tauri": "tauri",
+        "tauri dev": "tauri dev",
+        "tauri build": "tauri build",
+        "tauri debug": "tauri build --debug",
         "icon": "tauri icon"
     },
     "devDependencies": {
