--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tauriman"
+name = "rockcamrunwrap"
 version = "0.1.1"
-description = "A Tauri App"
+description = "A rockcamrunwrap App"
 authors = ["you"]
 edition = "2021"
 
