Add app icon, update dependencies, and enhance configuration files
- Added new app icon (app-icon.png).
- Updated package.json to include new dependencies: png2icons and sharp.
- Enhanced README with configuration instructions for TauriMan.
- Added various binary files and configuration files for the project.
- Removed unused tsconfig files and added new build info.
- Updated Vite configuration and main application entry point.
- Introduced new styles using SCSS and removed old CSS file.
- Updated localization and added new language support.
- Improved project structure by adding new tools and models in Rust.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "tauri dev": "tauri dev",
         "tauri build": "tauri build",
         "tauri debug": "tauri build --debug",
-        "icon": "tauri icon"
+        "icon": "tauri icon && node scripts/creatIcon.cjs"
     },
     "devDependencies": {
         "@tauri-apps/cli": "^2",
